--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
+  <section class="cta">
+  <h2>Ready to Build?</h2>
+  <p>Let’s make your vision a reality. Get in touch for a no-pressure, free consultation.</p>
+  <div class="cta-btn-wrap">
+    <a href="contact.html" class="cta-btn">Get a Quote</a>
+  </div>
+</section>
 <body>
   <header>
     <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
@@ -21,7 +28,6 @@
       </ul>
     </nav>
   </header>
-
   <section class="hero">
     <h1>Your Trusted Partner in Building the Future</h1>
     <p>From Residential Homes to Public Parks — Built to Last, Built for You.</p>
