--- a/about.html
+++ b/about.html
@@ -3,31 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Colton Construction</title>
+  <title>About Us – Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
-    <h1>Colton Construction Company</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="section">
-    <h2>About Colton Construction</h2>
-    <p>Colton Construction has proudly served the Oregon community for over a decade. We're committed to precision, integrity, and craftsmanship. Whether it's residential, commercial, or civic infrastructure — we build with purpose and pride.</p>
-    <p>Licensed, bonded, and fully committed to bringing your vision to life with professionalism and grit.</p>
+  <header>…</header>
+
+  <section class="hero">
+    <h1>About Colton Construction</h1>
+    <p>Your dedicated partner in building quality, integrity, and passion.</p>
   </section>
-  <footer>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
-    <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
-  </footer>
+
+  <section class="section" id="about">
+    <h2>About Us</h2>
+    <p>We’re not just contractors — we’re craftsmen. Colton Construction delivers elite results with integrity, precision, and passion. Licensed in Oregon and built to serve, we bring dreams to life across residential, commercial, and civic landscapes.</p>
+    <p>OR CCB #184522</p>
+  </section>
+
+  <footer>…</footer>
+  <a href="#contact" class="floating-button">✉️</a>
 </body>
 </html>
