--- a/about.html
+++ b/about.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us – Colton Construction</title>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Our Services – Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
@@ -11,13 +10,20 @@
   <header>…</header>
 
   <section class="hero">
-    <h1>About Colton Construction</h1>
-    <p>Your dedicated partner in building quality, integrity, and passion.</p>
+    <h1>Our Services</h1>
+    <p>We guide you through every step — crafting homes, trails, and commercial spaces with care.</p>
   </section>
 
-  <section class="section" id="about">
-    <h2>About Us</h2>
-    <p>We’re not just contractors — we’re craftsmen. Colton Construction delivers elite results with integrity, precision, and passion. Licensed in Oregon and built to serve, we bring dreams to life across residential, commercial, and civic landscapes.</p>
+  <section class="section" id="services">
+    <h2>Residential & Custom Homes</h2>
+    <p>Colton Construction Company takes pride in bringing your home to life. We guide you all the way through the building process—with experience and care to ensure it’s everything you dreamed it would be.</p>
+
+    <h2>Oregon Parks & Trails</h2>
+    <p>We love the outdoors and love getting creative and dirty building parks and bike trails all over Oregon, including Magnolia Park, Tryon Creek, Milo McIver Park, Banks-Vernonia Trail and more.</p>
+
+    <h2>Commercial</h2>
+    <p>Since 2008 we’ve grown into state-backed projects like Expo Center GreenWall, Pfreim Family Brewers, Rugg Rd landslide repair, Oregon Metro Zoo remodels, and pedestrian improvements.</p>
+
     <p>OR CCB #184522</p>
   </section>
 
