--- a/services.html
+++ b/services.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services - Colton Construction</title>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Our Services – Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
-    <h1>Colton Construction Company</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="section">
-    <h2>Our Services</h2>
-    <ul>
-      <li><strong>Residential Construction:</strong> From custom homes to remodels and expansions.</li>
-      <li><strong>Commercial Construction:</strong> Office buildouts, retail spaces, industrial-grade structures.</li>
-      <li><strong>Parks & Trails:</strong> Civic infrastructure including shelters, paved trails, and scenic rest areas.</li>
-    </ul>
-    <p>Every service we offer is backed by decades of experience and an eye for detail.</p>
+  <header>…</header>
+
+  <section class="hero">
+    <h1>Our Services</h1>
+    <p>We guide you through every step — crafting homes, trails, and commercial spaces with care.</p>
   </section>
-  <footer>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
-    <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
-  </footer>
+
+  <section class="section" id="services">
+    <h2>Residential & Custom Homes</h2>
+    <p>Colton Construction Company takes pride in bringing your home to life. We guide you all the way through the building process—with experience and care to ensure it’s everything you dreamed it would be.</p>
+
+    <h2>Oregon Parks & Trails</h2>
+    <p>We love the outdoors and love getting creative and dirty building parks and bike trails all over Oregon, including Magnolia Park, Tryon Creek, Milo McIver Park, Banks-Vernonia Trail and more.</p>
+
+    <h2>Commercial</h2>
+    <p>Since 2008 we’ve grown into state-backed projects like Expo Center GreenWall, Pfreim Family Brewers, Rugg Rd landslide repair, Oregon Metro Zoo remodels, and pedestrian improvements.</p>
+
+    <p>OR CCB #184522</p>
+  </section>
+
+  <footer>…</footer>
+  <a href="#contact" class="floating-button">✉️</a>
 </body>
 </html>
