--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Colton Construction Company</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
-
-  <!-- Header + Hero Unified -->
   <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png"
-         alt="Colton Construction Logo" class="logo" />
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
     <h1>Colton Construction Company</h1>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -55,19 +51,15 @@
     </div>
   </section>
 
-  <section class="section" id="projects">
-    <h2>Featured Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be" alt="Modern Mountain Home">
-        <h3>Modern Mountain Home</h3>
-        <p>A panoramic escape in the Cascades, built for both elegance and resilience.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1507089947368-19c1da9775ae" alt="Downtown Office Buildout">
-        <h3>Downtown Office Buildout</h3>
-        <p>From blueprint to grand opening in 90 days — commercial excellence, delivered.</p>
-      </div>
+  <section class="section" id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://static.wixstatic.com/media/b0ae08_5dc5c6bcd80f4ffbb497305168539fc8~mv2.jpg" alt="Colton Project 1">
+      <img src="https://static.wixstatic.com/media/b0ae08_8ef723b287a84d08a7bd1d87f519b00b~mv2.jpg" alt="Colton Project 2">
+      <img src="https://static.wixstatic.com/media/b0ae08_7409ea53b53e4ae0893d96ef7f1e5c94~mv2.jpg" alt="Colton Project 3">
+      <img src="https://static.wixstatic.com/media/b0ae08_1de4229f567347c0a2e71e1b344b66f3~mv2.jpg" alt="Colton Project 4">
+      <img src="https://static.wixstatic.com/media/b0ae08_2f088e0f3ab147b8be0b3efbcdb73de5~mv2.jpg" alt="Colton Project 5">
+      <img src="https://static.wixstatic.com/media/b0ae08_8acfc4aeed5a4c3fa89beff68ab66062~mv2.jpg" alt="Colton Project 6">
     </div>
   </section>
 
@@ -75,31 +67,16 @@
     <h2>Ready to Build?</h2>
     <p>Let’s make your vision a reality. Get in touch for a no-pressure, free consultation.</p>
     <div class="cta-btn-wrap">
-      <a href="#contact" class="cta-btn">Get a Quote</a>
+      <a href="contact.html" class="cta-btn">Get a Quote</a>
     </div>
   </section>
 
-  <section class="section" id="contact">
-    <h2>Contact Us</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Full Name" required>
-      <input type="email" placeholder="Email Address" required>
-      <textarea placeholder="Project details..." rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-    <p>Email: <a href="mailto:info@coltonconstructioncompany.com">info@coltonconstructioncompany.com</a><br>
-       Phone: (555) 123‑4567<br>
-       CCB#: 208474 — Licensed in Oregon</p>
-  </section>
-
   <footer>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png"
-         alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
     <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
   </footer>
 
-  <!-- Optional Floating Contact Button -->
-  <a href="#contact" class="floating-button">✉️</a>
-
+  <!-- Optional Floating Button -->
+  <a href="contact.html" class="floating-button">✉️</a>
 </body>
 </html>
