--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png/v1/fill/w_384,h_291,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
     <h1>Colton Construction Company</h1>
     <nav>
       <ul>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -25,41 +25,30 @@
     <p>From Residential Homes to Public Parks — Built to Last, Built for You.</p>
   </section>
 
-  <section class="section" id="about">
-    <h2>About Us</h2>
-    <p>We’re not just contractors — we’re craftsmen. Colton Construction delivers elite results with integrity, precision, and passion. Licensed in Oregon and built to serve, we bring dreams to life across residential, commercial, and civic landscapes.</p>
-  </section>
-
-  <section class="section" id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=800&q=80" alt="Residential Construction">
-        <h3>Residential Construction</h3>
-        <p>Custom homes, additions, and renovations — we build your legacy from the ground up.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e" alt="Commercial Construction">
-        <h3>Commercial Projects</h3>
-        <p>Durable, code-compliant, and client-focused builds for offices, retail, and more.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1599423300746-b62533397364" alt="Parks and Trails">
-        <h3>Parks & Trails</h3>
-        <p>We bring Oregon’s beauty to life with sustainable trails, structures, and public spaces.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section" id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="https://static.wixstatic.com/media/b0ae08_5dc5c6bcd80f4ffbb497305168539fc8~mv2.jpg" alt="Colton Project 1">
-      <img src="https://static.wixstatic.com/media/b0ae08_8ef723b287a84d08a7bd1d87f519b00b~mv2.jpg" alt="Colton Project 2">
-      <img src="https://static.wixstatic.com/media/b0ae08_7409ea53b53e4ae0893d96ef7f1e5c94~mv2.jpg" alt="Colton Project 3">
-      <img src="https://static.wixstatic.com/media/b0ae08_1de4229f567347c0a2e71e1b344b66f3~mv2.jpg" alt="Colton Project 4">
-      <img src="https://static.wixstatic.com/media/b0ae08_2f088e0f3ab147b8be0b3efbcdb73de5~mv2.jpg" alt="Colton Project 5">
-      <img src="https://static.wixstatic.com/media/b0ae08_8acfc4aeed5a4c3fa89beff68ab66062~mv2.jpg" alt="Colton Project 6">
+  <section class="section" id="projects">
+    <h2>Featured Projects</h2>
+    <div class="carousel-container">
+      <img src="media/b0ae08_8e09a9934bdf4e02bbdaf7d8e587050b~mv2.avif" alt="Project 1">
+      <img src="media/b0ae08_4214c2a3ca9b47e5a3806f952eb987d3~mv2.avif" alt="Project 2">
+      <img src="media/b0ae08_8910fe8d11f940c29ecf3f3d118be78b~mv2.avif" alt="Project 3">
+      <img src="media/b0ae08_1fadd31cc3a2401a8534bee0fe52f5d8~mv2.avif" alt="Project 4">
+      <img src="media/b0ae08_941fc98f949643c798198411c9672bbb~mv2.avif" alt="Project 5">
+      <img src="media/b0ae08_8064b7b5ba1a46ed87e6f9eb3044e451~mv2.avif" alt="Project 6">
+      <img src="media/b0ae08_1f9824bba6994a6b81011a62d1b694dc~mv2.avif" alt="Project 7">
+      <img src="media/b0ae08_d89c5a6c632142eb835ae184bff6b77c~mv2.avif" alt="Project 8">
+      <img src="media/b0ae08_320fe762d18e4967900fbf34ef4d1f2b~mv2.avif" alt="Project 9">
+      <img src="media/b0ae08_8f434155494a4aacbc87db7284be0d5b~mv2.avif" alt="Project 10">
+      <img src="media/b0ae08_a92da0be1a82486d8d267b4f1e75cce3~mv2.avif" alt="Project 11">
+      <img src="media/b0ae08_501e3ef2ce9f41c3ace85e3b540f71d5~mv2.avif" alt="Project 12">
+      <img src="media/b0ae08_9a004302a5ba48528c4d0c3e85f256b7~mv2.avif" alt="Project 13">
+      <img src="media/b0ae08_580483751c944622bec291c714cafda5~mv2.avif" alt="Project 14">
+      <img src="media/b0ae08_d6fec83735ca4fe0a65bbebe144c90de~mv2.avif" alt="Project 15">
+      <img src="media/b0ae08_bee29881fe48436d9394ac529396d2dc~mv2.avif" alt="Project 16">
+      <img src="media/b0ae08_94d6a4bc59f04dcdbc59a32ef20782d3~mv2.avif" alt="Project 17">
+      <img src="media/b0ae08_de007462d5c4419db7bd39bef61d0574~mv2.avif" alt="Project 18">
+      <img src="media/b0ae08_4ce69773525a44eaa3627d68d8d1d02e~mv2.avif" alt="Project 19">
+      <img src="media/b0ae08_157d909d8f6d4b54ab85df0def362e33~mv2.avif" alt="Project 20">
+      <img src="media/b0ae08_895d9a473145415380a3ef1640919ee5~mv2.avif" alt="Project 21">
     </div>
   </section>
 
@@ -72,11 +61,10 @@
   </section>
 
   <footer>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png/v1/fill/w_384,h_291,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;">
     <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
   </footer>
 
-  <!-- Optional Floating Button -->
   <a href="contact.html" class="floating-button">✉️</a>
 </body>
 </html>
