--- a/about.html
+++ b/about.html
@@ -2,26 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us – Colton Construction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us - Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <header>…</header>
+  <header>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
+    <div>
+      <h1>Colton Construction Company</h1>
+      <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <section class="hero">
-    <h1>About Colton Construction</h1>
-    <p>Your dedicated partner in building quality, integrity, and passion.</p>
-  </section>
-
-  <section class="section" id="about">
+  <section class="section">
     <h2>About Us</h2>
-    <p>We’re not just contractors — we’re craftsmen. Colton Construction delivers elite results with integrity, precision, and passion. Licensed in Oregon and built to serve, we bring dreams to life across residential, commercial, and civic landscapes.</p>
-    <p>OR CCB #184522</p>
+    <p><strong>Excellence & Professionalism</strong><br>
+    We are a full-service construction company working in both residential and commercial areas since 2004. Our experience, along with reliable subcontractors, ensures each project is managed and completed to the highest measure of quality expected.</p>
+
+    <p><strong>Capabilities</strong><br>
+    Our extensive range of projects has provided us experience in site preparation, custom homes, property & land development, street/road construction, heavy civil construction, underground utilities, framing, selective demolition, siding, roofing, concrete & asphalt, finish trim, landscaping, and more. Visit the Services page for a list of completed projects.</p>
+
+    <p><strong>Personalized Approach</strong><br>
+    Our goal is to build long-term relationships by providing reliable, honest, quality service on every project — big or small. A collaborative approach builds a strong working platform for our clients and assures a positive experience for both general contractor and owner. We look forward to earning your business!</p>
+
+    <div style="margin-top: 30px;">
+      <a href="index.html" class="cta-btn">← Back to Home</a>
+    </div>
   </section>
 
-  <footer>…</footer>
-  <a href="#contact" class="floating-button">✉️</a>
+  <footer>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;" />
+    <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
+  </footer>
+
+  <a href="contact.html" class="floating-button">✉️</a>
 </body>
 </html>
