--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us – Colton Construction</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact - Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <header>…</header>
-
-  <section class="hero">
-    <h1>Contact Us</h1>
-    <p>We’re ready to hear about your next vision — let’s build together.</p>
-  </section>
+  <header>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
+    <div>
+      <h1>Colton Construction Company</h1>
+      <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <section class="section" id="contact">
-    <h2>Get in Touch</h2>
+    <h2>Contact Us</h2>
+    <p>Have a question or need a quote? We’re here to help.</p>
+
     <form class="contact-form">
-      <input type="text" placeholder="Full Name" required>
-      <input type="email" placeholder="Email Address" required>
+      <input type="text" placeholder="Full Name *" required />
+      <input type="email" placeholder="Email Address *" required />
+      <input type="tel" placeholder="Phone Number" />
       <textarea placeholder="Project details..." rows="5" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-    <p>PO Box #1168, Oregon City, OR 97045</p>
-    <p>OR CCB #184522</p>
+
+    <p style="margin-top: 30px;">
+      <strong>GET IN TOUCH!</strong><br />
+      PO Box #1168<br />
+      Oregon City, OR 97045<br />
+      Email: <a href="mailto:info@coltonconstructioncompany.com">info@coltonconstructioncompany.com</a><br />
+      Phone: (555) 123‑4567
+    </p>
+
+    <div style="margin-top: 40px;">
+      <a href="index.html" class="cta-btn">← Back to Home</a>
+    </div>
   </section>
 
-  <footer>…</footer>
-  <a href="#contact" class="floating-button">✉️</a>
+  <footer>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;" />
+    <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
+  </footer>
+
+  <a href="contact.html" class="floating-button">✉️</a>
 </body>
 </html>
