--- a/services.html
+++ b/services.html
@@ -3,22 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Services - Colton Construction</title>
+  <title>Our Services - Colton Construction</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
-    <div>
-      <h1>Colton Construction Company</h1>
-      <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
-    </div>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" class="logo" />
+    <h1>Colton Construction Company</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -29,29 +25,34 @@
 
     <div class="services">
       <div class="card">
+        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914" alt="Custom Home" />
         <h3>Residential & Custom Homes</h3>
-        <p>Colton Construction Company takes pride in bringing your home to life. We will guide you all the way through the building process. With our knowledge and experience, you can rest assured everything will be taken care of and your beautiful home will be all you dreamed it would be!</p>
+        <p>
+          Colton Construction Company takes pride in bringing your home to life. We guide you through the building process and ensure everything is handled with expertise and care.
+        </p>
       </div>
 
       <div class="card">
+        <img src="https://images.unsplash.com/photo-1599423300746-b62533397364" alt="Trail Construction" />
         <h3>Oregon Parks & Trails</h3>
-        <p>We love the outdoors and enjoy getting creative (and dirty!) building parks and bike trails all over Oregon. Our work includes the Cazadero Bike Trails, Banks Vernonia Bike Trail, Cottonwood Canyon Visitor Center, Umatilla Gun Range and briefing building, Aurora City Park, Magnolia Park, Metzger Park, Tryon Creek, Milo McIver Park, and Latourell Falls — just to name a few.</p>
+        <p>
+          From bike paths to visitors' centers, we've helped build Oregon’s scenic treasures: Cazadero, Banks Vernonia, Latourell Falls, and many more.
+        </p>
       </div>
 
       <div class="card">
-        <h3>Commercial Projects</h3>
-        <p>After the housing market fell in 2008, we successfully pivoted into state-level work. We've gained experience on diverse projects like the Expo Center GreenWall, Pfriem Family Brewers (original build and addition), Rugg Road Landslide Repair, River Rd & Park Ave Pedestrian Improvements, and various remodels and repairs at the Oregon Metro Zoo.</p>
+        <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e" alt="Commercial Site" />
+        <h3>Commercial Construction</h3>
+        <p>
+          Experienced in state and public works projects: Pfreim Brewery, Expo Center GreenWall, Zoo renovations, pedestrian improvements, and beyond.
+        </p>
       </div>
-    </div>
-
-    <div style="margin-top: 30px;">
-      <a href="index.html" class="cta-btn">← Back to Home</a>
     </div>
   </section>
 
   <footer>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" style="height: 40px; margin-bottom: 10px;" />
-    <p>&copy; 2025 Colton Construction Company. All rights reserved.</p>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" />
+    <p>&copy; 2025 Colton Construction Company | CCB# 184522 | All rights reserved.</p>
   </footer>
 
   <a href="contact.html" class="floating-button">✉️</a>
