--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <h2>Ready to Build?</h2>
     <p>Let’s make your vision a reality. Get in touch for a no-pressure, free consultation.</p>
     <div class="cta-btn-wrap">
-      <a href="#contact" class="cta-btn">Get a Quote</a>
+      <a href="contact.html" class="cta-btn">Get a Quote</a>
     </div>
   </section>
 
