--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
   </script>
 </head>
 <body>
-<header>
-  <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
-  <div>
-    <h1>Colton Construction Company</h1>
-    <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
+<header class="epic-header">
+  <div class="header-left">
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" class="logo" />
   </div>
-  <nav>
+  <div class="header-center">
+    <h1>Colton Construction Company</h1>
+    <p class="ccb">OR CCB #184522</p>
+  </div>
+  <nav class="header-right">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
