--- a/services.html
+++ b/services.html
@@ -8,17 +8,20 @@
 </head>
 <body>
   <header>
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" class="logo" />
-    <h1>Colton Construction Company</h1>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
+    <div>
+      <h1>Colton Construction Company</h1>
+      <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section class="section">
