--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 <body>
 <header class="epic-header">
   <div class="header-left">
-    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Logo" class="logo" />
+    <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
   </div>
   <div class="header-center">
     <h1>Colton Construction Company</h1>
     <p class="ccb">OR CCB #184522</p>
   </div>
-  <nav class="header-right">
+  <div class="header-right">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -56,7 +56,7 @@
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-  </nav>
+  </div>
 </header>
 
   <section class="hero">
