--- a/projects.html
+++ b/projects.html
@@ -7,19 +7,25 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+<header class="epic-header">
+  <div class="header-left">
     <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
+  </div>
+  <div class="header-center">
     <h1>Colton Construction Company</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <p class="ccb">OR CCB #184522</p>
+  </div>
+  <div class="header-right">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>
+
   <section class="section">
     <h2>Featured Projects</h2>
     <p><strong>Modern Mountain Home:</strong> A panoramic getaway in the Cascades, built with sustainable wood and steel.</p>
