--- a/services.html
+++ b/services.html
@@ -7,22 +7,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+<header class="epic-header">
+  <div class="header-left">
     <img src="https://static.wixstatic.com/media/b0ae08_4557a6bc01df4ab58647288f1895cf5a.png" alt="Colton Construction Logo" class="logo" />
-    <div>
-      <h1>Colton Construction Company</h1>
-      <p style="font-size: 0.9rem; margin: 0; color: #ccc;">OR CCB #184522</p>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  </div>
+  <div class="header-center">
+    <h1>Colton Construction Company</h1>
+    <p class="ccb">OR CCB #184522</p>
+  </div>
+  <div class="header-right">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>
 
   <section class="section">
     <h2>Our Services</h2>
